[project]
name = "dummy"
version = "0.1.0"
description = "dummy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.12.2",
]

[project.scripts]
dummy = "dummy.main:run"
run_crew = "dummy.main:run"
train = "dummy.main:train"
replay = "dummy.main:replay"
test = "dummy.main:test"
run_with_trigger = "dummy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
